# vibe

./: .coveragerc  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile  Makefile  README.md  alembic.ini  database.py  db_tables.py  docker-compose.yml  main.py  models.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  doc-metrics.yml  outcome-probe.yml  test.yml
app/: __init__.py
app/contracts/: __init__.py  billing_order.py
app/core/: __init__.py  ai.py  ai_settings.py  ai_settings_service.py  config.py  db.py  db_migrate.py  errors.py  identity.py  identity_service.py  logging.py  security.py
app/domains/: __init__.py
app/domains/billing/: __init__.py  models.py  service.py
app/domains/leads/: __init__.py  billing_export.py  models.py  schemas.py  service.py
app/domains/proposals/: __init__.py  models.py  service.py
app/interfaces/: __init__.py
app/interfaces/api/: __init__.py  router.py
app/interfaces/mcp/: __init__.py  mount.py  server.py
app/interfaces/web/: __init__.py  admin.py  ai.py  auth.py  invoices.py  leads.py  proposals.py
app/shared/: __init__.py  labels.py
docs/: NEXT-SESSION-PROMPT.md  audit-prompt-scaling-roadmap.md  audit-report-scaling-roadmap.md  characterization-map.md  deploy-runbook.md  discovery.md  open-questions.md  remediation-backlog.md  runbook.md  scaling-roadmap.md  verfahrensdokumentation.md
docs/adr/: 001-archive-storage.md  002-zugferd-library.md  003-numbering-strategy.md  004-vies-failure.md  005-money-type.md  006-pdf-renderer.md  007-billing-order-contract.md  008-mcp-dedup-interface-edge.md  009-interface-split-rfc7807.md  010-alembic-split-versioning.md  011-t2-web-rest-model-lock.md  012-t5-scaffold-independence-contract.md  013-t6-structure-assertions-doc-gate.md  014-t7a-models-shim-death.md  015-t7b-services-ai-shim-death.md  016-t7c-linkedin-import-shim-death.md  017-t7d-mcp-server-relocation.md
docs/outcome-probe/: BASELINE.md  README.md  RESULTS.md  api-endpoint.expected  lead-field.expected  mcp-tool.expected  new-domain.expected  vat-rule.expected
migrations/billing/: env.py
migrations/billing/versions/: 0001_billing_baseline.py
migrations/crm/versions/: 0001_crm_baseline.py
routes/: admin.py  ai.py  api.py  auth.py  invoices.py  leads.py  mcp.py  proposals.py
scripts/: check_architecture_metrics.py  new_domain.py  outcome_probe.py
services/: ai.py  auth.py  linkedin_import.py  mcp_server.py  numbering.py  pdf.py  proposals.py
services/invoicing/: __init__.py  archive.py  document.py  eu_countries.py  finalize.py  hashchain.py  immutability.py  integrity_check.py  money.py  numbering.py  state_machine.py  vat.py  vies.py
static/: app.css
static/brand/: brand-kit.css  components.css  components.js  tokens.css  typography.css
templates/: base.html  dashboard.html
templates/admin/: ai_settings.html  api_keys.html  issuer.html  user_form.html  users.html  vies_overrides.html
templates/auth/: login.html
templates/invoices/: detail.html  document.html  edit.html  list.html
templates/leads/: detail.html  form.html  import_linkedin.html  list.html
templates/proposals/: document.html  editor.html  view.html
tests/: conftest.py  test_db_migration_parity.py  test_db_partition.py  test_models_split.py
tests/characterization/: conftest.py  test_api_errors.py  test_leads_routes.py  test_mcp_tools.py  test_proposals_routes.py
tests/e2e/: conftest.py  test_api.py  test_routes.py
tests/fixtures/: factories.py
tests/integration/: test_document_renderer.py  test_finalize.py  test_immutability_lines.py  test_integrity_check.py  test_integrity_cli.py  test_numbering.py  test_numbering_concurrency.py  test_proposal_from_plan.py  test_schema_migration.py  test_storno.py  test_vies_audit.py
tests/unit/: test_ai_proposal_drafts.py  test_money.py  test_rfc7807_mapper.py  test_smoke.py  test_state_machine.py  test_vat_engine.py  test_vies_unit.py
