# Scaling-roadmap Schritt 1 — Tooling-Fundament.
#
# This file is the single config home for ruff (lint+format), mypy
# (type-check) and import-linter (executable import contracts). It does NOT
# replace requirements*.txt as the dependency manifest — the app is still
# pip/uv-installed from those; pyproject here is tool config only (no
# [project]/[build-system] table, so nothing about packaging changes).
#
# Schritt 1 is "repair/extend", not "introduce": Makefile + the GitHub-Actions
# workflows already existed (issue #2). This adds the missing lint /
# type-check / import-contract layer and wires it into `make verify`.
#
# Strictness is deliberately LAX in Schritt 1 (the gate *mechanism* is the
# deliverable, not a mass cleanup — that would violate one-concern and the
# "keine Verhaltensänderung" discipline). Rules sharpen in later steps as
# code moves into `app/`; legacy modules are type-checked strictly only once
# they migrate (roadmap principle "lax global, neue Module strict").

# --------------------------------------------------------------------------
# ruff — lint + format
# --------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".venv",
    "archive",
    "generated_pdfs",
    "static",
    ".kosit-cache",
    "reports",
]

[tool.ruff.lint]
# Lenient seed set: real-bug rules (pyflakes F, pycodestyle E4/E7/E9). This
# is the ruff default select, made explicit. Stylistic/opinionated rule
# families (I, B, UP, …) are added in later migration steps so Schritt 1
# stays a tooling step, not a repo-wide reformat/refactor.
#
# Scope note: `make lint` (in `make verify`) runs ruff only on the new Soll
# surface (scripts/ + app/) — same rationale as format-check/mypy. Legacy
# modules carry pre-existing E702/F841 style debt; tightening them
# repo-wide is churn owned by no step (and would touch the
# move-not-rewrite invoicing code + the test suite). `make lint-all` runs
# the same rules everywhere, non-gating, for the per-module cleanup that
# happens as code migrates into app/.
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
# Re-export shims (today: top-level package __init__) legitimately import
# names they don't use locally. The Schritt-4 models shim relies on this too.
"__init__.py" = ["F401", "F403"]
"models.py" = ["F401"]
"tests/*" = ["F401", "F811"]

[tool.ruff.format]
# Format enforcement (`ruff format --check`, see `make format-check`) is
# scoped to `app/` — the generated Soll surface the scaffold controls
# byte-for-byte (Scaffold-Vertrag). Legacy modules and scripts/ tooling are
# intentionally NOT reformatted in Schritt 1: a repo-wide reformat is churn
# that belongs to no step, and `services/invoicing/` is explicitly
# move-not-rewrite — its bytes must stay identical so the
# characterization/coverage net keeps meaning. Each legacy module gets
# formatted when it moves into app/ in its migration step.

# --------------------------------------------------------------------------
# mypy — type-check (lax global, app.* strict)
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
# Scope: the new Soll surface (scripts/, app/) — paths are passed by the
# `typecheck` make target conditionally (app/ may not exist yet), not via
# `files=` here, so mypy doesn't error on a missing app/ on the committed
# tree. Legacy top-level modules join mypy as they migrate into app/
# (roadmap: "neue Module strict, lax global" — global laxity here = legacy
# not yet under the checker, by step).
exclude = "(^|/)(\\.venv|archive|generated_pdfs|reports)/"

[[tool.mypy.overrides]]
# New modules are strict by construction (the scaffold emits code that
# passes this). When the billing/CRM code moves into app/domains/* it
# inherits strict here — that is where legacy code becomes typed.
module = "app.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# --------------------------------------------------------------------------
# import-linter — executable import contracts (Schicht 2: "Soll als Zwang")
# --------------------------------------------------------------------------
# Roadmap principle: a rule is INACTIVE until its package exists; each
# migration step activates/sharpens its edge. `app/domains/billing` now
# exists (Schritt 2 created the skeleton, Schritt 4 moved the models) and
# Schritt 5 cut the `_snapshot_customer` reach via the `BillingOrder`
# contract — so this step sharpens the billing edge accordingly.
#
# Schritt 5 SHARPENS this rule. The seed (services.invoicing ↛ routes) was
# the start of the billing isolation; now that the `_snapshot_customer()`
# `Lead` reach is replaced by the `BillingOrder` contract
# (`app.contracts.billing_order`) and every invoicing model import was
# repointed from the `models` shim to billing's own
# `app.domains.billing.models`, the billing core must import **nothing** from
# CRM: not `routes`, and not the other domains' packages
# (`app.domains.leads`, `app.domains.proposals`). The top-level `models`
# shim re-exports `domains/*` — forbidding the domain packages catches a
# reach through the shim **transitively** too (import-linter `forbidden`
# contracts detect indirect imports by default:
# `services.invoicing → models → app.domains.leads` is flagged). That is
# the precise encoding of the roadmap rule "billing ↛ domains/*/models",
# without listing the bare `models` module (a single .py module is not a
# valid grimp `root_package` — only packages are). Billing MAY still import
# its own `app.domains.billing.*`, `app.contracts.*`, `app.core.*`,
# `app.shared.*`. This is the `domains/billing/*` row of the roadmap edge
# table; only the billing line is sharpened here — the full interface edge
# set is Schritt 7. Rationale: docs/adr/007-billing-order-contract.md.
#
# `app` is added to root_packages so the rule can name the domain packages;
# correctness is CI-verified (no local interpreter with app deps — grimp
# needs to import the package graph; same constraint as Schritt 4).
[tool.importlinter]
root_packages = ["services", "routes", "app"]

[[tool.importlinter.contracts]]
name = "billing core (services.invoicing) must not import CRM — Naht via the BillingOrder contract (Schritt 5)"
type = "forbidden"
source_modules = ["services.invoicing"]
forbidden_modules = [
    "routes",
    "app.domains.leads",
    "app.domains.proposals",
]

# Schritt 7 (MCP-Entdopplung) — the `interfaces/mcp` row of the roadmap edge
# table. The MCP interface (`services/mcp_server.py`, not yet under
# `app/interfaces/` — that move is Schritt 8) must not **construct domain
# models**: ARCHITECTURE.md Struktur-Schuld 4 (`create_lead`/`update_lead`
# instantiating `Lead(...)` as a duplicate of the route/REST logic). The
# duplicated construction/query/serialization moved verbatim into
# `app/domains/{leads,proposals}/service.py`; the tools now only own the
# Session(engine) lifecycle and delegate.
#
# `allow_indirect_imports = "True"` encodes exactly "no DIRECT domain-model
# import in the MCP interface" while permitting the legitimate intra-domain
# `service → models` / `schemas → models` chain (the interface reaches the
# enums/logic through the service module, never `domains/*/models` itself).
# This is the inverse of the Schritt-5 billing rule, which relies on the
# DEFAULT (transitive) detection to catch the `models`-shim reach — here a
# transitive flag would wrongly forbid `mcp_server → leads.service →
# leads.models`. The shared clean `services/proposals.py` is left untouched
# (also used verbatim by `routes/proposals.py`); it is a service, not the
# MCP interface, so its `Proposal(...)` construction is legitimate.
#
# Scope: only the `interfaces/mcp` row is activated here, for the
# **Lead/Proposal** duplicate (Schuld 4). The billing invoice-draft/line
# tools' construction (billing-internal, NOT the CRM duplicate; finalize
# already routes Billing via the BillingOrder contract since Schritt 5) goes
# through a billing facade with the web/api interface rows in Schritt 8 —
# pulling interface-shaped code into `services/invoicing/` now would also
# risk the `.coveragerc` 90 % billing gate. A rule is inactive until its
# package exists / each step activates its own edge (roadmap Schicht 2).
# Rationale: docs/adr/008-mcp-dedup-interface-edge.md.
[[tool.importlinter.contracts]]
name = "MCP interface (services.mcp_server) must not directly import/construct domain models — MCP-Entdopplung (Schritt 7)"
type = "forbidden"
source_modules = ["services.mcp_server"]
forbidden_modules = [
    "app.domains.leads.models",
    "app.domains.proposals.models",
]
allow_indirect_imports = "True"
